--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,23 +19,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/viewLogo"
-        tools:layout_editor_absoluteY="50dp" />
-
-    <ImageView
-        android:id="@+id/viewLogo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="50dp"
-        android:contentDescription="someone listening to music"
-        android:padding="10dp"
-        android:src="@drawable/logoala"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="50dp"
+        tools:ignore="MissingConstraints" />
 
 
     <TextView
@@ -49,18 +34,19 @@
         android:textColor="#000000"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/iconoCalendario"
         android:layout_width="51dp"
         android:layout_height="54dp"
         android:layout_marginStart="340dp"
+        android:layout_marginTop="50dp"
         android:contentDescription="someone listening to music"
         android:padding="10dp"
         android:src="@drawable/th"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/etDate"
@@ -68,11 +54,172 @@
         android:layout_height="50dp"
         android:layout_marginStart="228dp"
         android:autofillHints=""
+        android:textColor="#000000"
         android:textColorHint="#757575"
-        app:layout_constraintEnd_toStartOf="@+id/viewCorreo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/VerEvento"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:backgroundTint="#FFFFFF"
+        android:text="Ver Mi evento de ejemplo"
+        android:textColor="#000000"
+        android:textColorLink="#000000"
+        android:textStyle="bold|italic"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+         />
+
+    <RelativeLayout
+        android:id="@+id/frame"
+        android:layout_width="0dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="#9FC5F8"
+        android:orientation="vertical"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/tvTitulo1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="5dp"
+            android:text="Titulo"
+            android:textColor="#9900ff"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/editTextTitulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Titulo de la reunión"
+            android:inputType="textPersonName"
+            android:layout_marginTop="40dp"
+            android:autofillHints=""
+
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tvTitulo2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="5dp"
+            android:text="Hora"
+            android:textColor="#9900ff"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/editTextHora"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:inputType="numberDecimal"
+            android:layout_marginTop="110dp"
+            android:autofillHints=""
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tvTitulo3"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="5dp"
+            android:text="Mínutos"
+            android:textColor="#9900ff"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/editTextMintos"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:inputType="numberDecimal"
+            android:layout_marginStart="55dp"
+            android:layout_marginTop="110dp"
+            android:autofillHints=""
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tvTitulo4"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="5dp"
+            android:text="Sonido"
+            android:textColor="#9900ff"
+            tools:ignore="MissingConstraints" />
+
+        <Spinner
+            android:id="@+id/editListSonido"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="120dp"
+            android:autofillHints=""
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tvTitulo5"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="5dp"
+            android:text="Repetir"
+            android:textColor="#9900ff"
+            tools:ignore="MissingConstraints" />
+
+        <Spinner
+            android:id="@+id/editListRepetir"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="120dp"
+            android:autofillHints=""
+            tools:ignore="MissingConstraints" />
+
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="202dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="180dp"
+            android:layout_marginEnd="10dp"
+            android:background="#FFFFFF"
+            tools:ignore="MissingConstraints" />
+
+
+        <Button
+            android:id="@+id/Aceptar2"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="220dp"
+            android:layout_marginBottom="5dp"
+            android:backgroundTint="#009E0F"
+            android:text="Aceptar"
+            android:layout_marginTop="450dp"
+            app:cornerRadius="@android:dimen/thumbnail_height"
+             />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/salir"
@@ -86,7 +233,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.124"
-
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
