--- a/app/src/main/res/layout/activity_programar.xml
+++ b/app/src/main/res/layout/activity_programar.xml
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="16dp"
         tools:ignore="MissingConstraints" />
-
+    
     <RelativeLayout
         android:id="@+id/frame"
         android:layout_width="0dp"
@@ -34,7 +34,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="MissingConstraints">
+
+        >
 
         <TextView
             android:id="@+id/tvTitulo1"
@@ -55,6 +56,7 @@
             android:inputType="textPersonName"
             android:layout_marginTop="40dp"
             android:autofillHints=""
+
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -151,39 +153,133 @@
             android:layout_marginEnd="10dp"
             android:background="#FFFFFF"
             tools:ignore="MissingConstraints" />
+
+        <Spinner
+            android:id="@+id/editListAsistentes"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:hint="Lista de Asistentes"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="450dp"
+            android:autofillHints=""
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/AgregarAsistentes"
+            android:layout_width="250dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="450dp"
+            android:backgroundTint="#9FC5F8"
+            android:text="¿Agregar Asistentes?"
+            android:textColor="#000000"
+            android:textColorLink="#9FC5F8"
+            android:textStyle="bold|italic"
+             />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/frame2"
+        android:layout_width="0dp"
+        android:layout_height="250dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="#9FC5F8"
+        android:orientation="vertical"
+        android:layout_marginTop="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/tvTitulo23"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="5dp"
+            android:text="Nombre o Apellido del participante"
+            android:textColor="#000000"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/editTextTitulo2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint=""
+            android:inputType="textPersonName"
+            android:layout_marginTop="40dp"
+            android:autofillHints=""
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/tvTitulo232"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="5dp"
+            android:text="Lista de participantes"
+            android:textColor="#000000"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/cancelar2"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="5dp"
+            android:backgroundTint="#CF2A27"
+            android:layout_marginTop="180dp"
+            android:text="Cancelar"
+            app:cornerRadius="@android:dimen/thumbnail_height"
+             />
+
+        <Button
+            android:id="@+id/Aceptar2"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="220dp"
+            android:layout_marginBottom="5dp"
+            android:backgroundTint="#009E0F"
+            android:text="Aceptar"
+            android:layout_marginTop="180dp"
+            app:cornerRadius="@android:dimen/thumbnail_height"
+            app:layout_constraintStart_toEndOf="@+id/cancelar2" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/cancelar"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="5dp"
         android:backgroundTint="#CF2A27"
         android:text="Cancelar"
         app:cornerRadius="@android:dimen/thumbnail_height"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"
         app:layout_constraintHorizontal_bias="0.124"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frame"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/Aceptar"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="5dp"
+        android:layout_marginStart="70dp"
         android:backgroundTint="#009E0F"
+        android:layout_marginTop="50dp"
         android:text="Aceptar"
         app:cornerRadius="@android:dimen/thumbnail_height"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/cancelar" />
-
-
-    <!-- Add CalendarView to display the Calendar -->
-
+        app:layout_constraintStart_toEndOf="@+id/cancelar"
+        app:layout_constraintTop_toBottomOf="@+id/frame"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
