--- a/app/src/main/res/layout/activity_programar.xml
+++ b/app/src/main/res/layout/activity_programar.xml
@@ -270,15 +270,12 @@
         android:id="@+id/Aceptar"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="#009E0F"
-        android:layout_marginTop="50dp"
         android:text="Aceptar"
         app:cornerRadius="@android:dimen/thumbnail_height"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/cancelar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame"
         tools:ignore="MissingConstraints" />
 
