--- a/app/src/main/res/layout/activity_programar.xml
+++ b/app/src/main/res/layout/activity_programar.xml
@@ -242,13 +242,16 @@
             android:id="@+id/Aceptar2"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_marginStart="220dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="180dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@+id/cancelar2"
             android:backgroundTint="#009E0F"
             android:text="Aceptar"
-            android:layout_marginTop="180dp"
             app:cornerRadius="@android:dimen/thumbnail_height"
-            app:layout_constraintStart_toEndOf="@+id/cancelar2" />
+            app:layout_constraintEnd_toEndOf="parent" />
     </RelativeLayout>
 
     <Button
@@ -271,7 +274,7 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#009E0F"
         android:text="Aceptar"
         app:cornerRadius="@android:dimen/thumbnail_height"
